--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>Vite + Tailwind Todo App</title>
   </head>
   <body>
     <div id="app"></div>
